Tue Jul 18 12:13:19 2000  Owen Taylor  <otaylor@redhat.com>

        Updates to work with GTK+-2.0 theme engine architecture.
	It won't even sort of work with GTK+-1.2 any more.

	* configure.in src/Makefile.am: Look for GTK+-2.0, 
	install engine into GTK+-2.0 location.
	
	* src/pixbuf-style.h src/pixbuf-rc-style.[ch]: New
	files for GtkRcStyle and GtkStyle subclasses. Parsing,
	etc, moves to pixbuf-rc-style.[ch]

	* src/pixbuf-draw.c: Chain up to parent implementation
	when images aren't found for a certain element.

Sun Jul  9 18:15:58 2000  Owen Taylor  <otaylor@redhat.com>

	* configure.in (ACLOCAL): Add -Wall for gcc.

	* src/pixbuf-render.c (pixbuf_render): Fix problem
	using gdk_rectangle_intersect() from GTK+-1.2.

	* src/pixbuf-render.c src/pixbuf-draw.c: Remove 
	direct access to pixbuf internals.

Mon Mar  6 11:44:58 2000  Owen Taylor  <otaylor@redhat.com>

        * docs/gap-geometry.fig: Moved into docs/ subdir
	
        * Makefile.am configure.in autogen.sh src/Makefile.am: 
	automakify
	 
	* src/pixbuf.h src/pixbuf-render.c src/pixbuf-draw.c
	src/pixbuf-main.c: Move sources into subdir and
	rename.

Mon Mar  6 11:02:07 2000  Owen Taylor  <otaylor@redhat.com>

	* pixmap_theme_pixbuf.c: Handle drawing transparency without a
	mask correctly.

	* pixmap_theme_main.c pixmap_theme_draw.c: Remove duplicate
	includes.
	
Sun Feb  6 21:34:30 2000  Owen Taylor  <otaylor@redhat.com>

	* Started ChangeLog for pixbuf engine, check sources
	into CVS.

========== ChangeLog for pixmap engine ===================

1999-11-22  Martin Baulig  <martin@home-of-linux.org>

	* pixmap_theme_main.c (theme_duplicate_style): Really copy the
	`src_data->img_list', not just the pointer that points to it.

Tue Oct  5 15:13:29 1999  Owen Taylor  <otaylor@redhat.com>

	* pixmap_theme_draw.c (apply_theme_image): Don't set
	background pixmap on pixmaps.

1999-02-14  Raja R Harinath  <harinath@cs.umn.edu>

	* Theme/gtk/Makefile.am.in (Makefile.am): Handle the case when